Script file Abhi mat dal

--- a/login.html
+++ b/login.html
@@ -38,6 +38,7 @@
 
         </center>
     </content>
+    <!--
     <script>
 function myFunction() {
   var x = document.getElementById("pass");
@@ -47,6 +48,6 @@ function myFunction() {
     x.type = "password";
   }
 }
-</script>
+</script> -->
 </body>
 </html>
